# NESProject

./: CMakeLists.txt  README.md
include/: bus.h  olc6502.h  util.h
src/: bus.cpp  main.cpp  olc6502.cpp  olcNes_Video1_6502.cpp  olcPixelGameEngine.h
